@@ -1,6 +1,8 @@
+DIST eselect-emacs-1.10.tar.bz2 8061 RMD160 900e41cb975b6ecc6cb978c7ebbbb976e99f71e9 SHA1 003f01a7258ae23188a4519c374578e09b9915f7 SHA256 278fc9723ba039ce056eeef5d079cb682073bc26986e930e637e417da0738eac
 DIST eselect-emacs-1.8.tar.bz2 7764 RMD160 44d568e62264bde26fe9d6f74cbb0178dc3b8dd1 SHA1 a399ff9beec3ec4e5aeb66a25de2807f228decc0 SHA256 615962152ce33a7c1a0ac1a1d8d1f8ef4a0939f0931ed75e50915dd7879cc590
 DIST eselect-emacs-1.9.tar.bz2 7896 RMD160 94d3ee26c4a5e59145466e3bb2df40db1724d2e3 SHA1 b9e0ac26e29d4c9263a7881c7ed1d2502ea50c0e SHA256 9db11759c227e4cbefa4a0fd7ba24f5f994709f28da8ad2061a5d51be8ffa9df
+EBUILD eselect-emacs-1.10.ebuild 942 RMD160 0d367b6e470cb3c6c9bca43d17d15072851114cf SHA1 1e52831f0c62f448cf1eae4be60ae3f5999dcc80 SHA256 a7e686bd137400a608dfe2d8f29bb758cd93b953ed5250b1b7d03e89336c53f3
 EBUILD eselect-emacs-1.8.ebuild 944 RMD160 7072c7ea8e85338b65d61af7fc678e5877867393 SHA1 9e5a87e374826ffb3fcb27087f8abdd2bbe60fc2 SHA256 2247d94530b3ab9898ed6b06eab9c51a0a20c3d0e935780a3ae74aa6ccfd23fb
 EBUILD eselect-emacs-1.9.ebuild 941 RMD160 f85e1d8dacde127b5ded4f37625f110112dd84b0 SHA1 5e686f9100b552cf424c6674567d32b610be7f83 SHA256 aa7be74224fd372afd751a83c55b832531bd8f663571a6063039ca818827761c
-MISC ChangeLog 9447 RMD160 22c8a3fb4cc015c3b46719f5d19891dc80153dfe SHA1 77e59a7a861a48bd38f1d6d369c89ce24bbe5c79 SHA256 c0bad7be5e9fe066c2217d92adbfdbf8266fd493695a727dca9fd40d13015a29
+MISC ChangeLog 9574 RMD160 ebf0ecc616e15cd45b1b56a1c3f5101ff411d4d6 SHA1 6ed49cc6d14441ee84b52a1e665e91e151c1c7f7 SHA256 937e2b67e6fdc7beaf75cc4d609510edc77806ccaae2c1103b8682842e5f3713
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
